add all feature

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,169 +1,154 @@
 version: '3.8'
-
 services:
-  # PostgreSQL database for each service
-  user-db:
-    image: postgres:13
+  postgres:
+    image: postgres:13-alpine
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: user_service
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ecommerce
     ports:
       - "5432:5432"
     volumes:
-      - user-db-data:/var/lib/postgresql/data
-      - ./user-service/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - postgres_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - ecommerce-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
-  product-db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: product
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: product_service
-    ports:
-      - "5433:5432"
-    volumes:
-      - product-db-data:/var/lib/postgresql/data
-      - ./product-service/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-
-  warehouse-db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: warehouse
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: warehouse_service
-    ports:
-      - "5434:5432"
-    volumes:
-      - warehouse-db-data:/var/lib/postgresql/data
-      - ./warehouse-service/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-
-  shop-db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: shop
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: shop_service
-    ports:
-      - "5435:5432"
-    volumes:
-      - shop-db-data:/var/lib/postgresql/data
-      - ./shop-service/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-
-  order-db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: order
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: order_service
-    ports:
-      - "5436:5432"
-    volumes:
-      - order-db-data:/var/lib/postgresql/data
-      - ./order-service/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-
-  # Redis for caching and distributed locking
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
-
-  # API Gateway
-  api-gateway:
-    build: ./api-gateway
+  user-service:
+    build:
+      context: .
+      dockerfile: ./user-service/Dockerfile.user
+    restart: on-failure
     ports:
       - "8080:8080"
+      - "50051:50051"
     environment:
-      - USER_SERVICE_URL=user-service:8081
-      - PRODUCT_SERVICE_URL=product-service:8082
-      - ORDER_SERVICE_URL=order-service:8083
-      - SHOP_SERVICE_URL=shop-service:8084
-      - WAREHOUSE_SERVICE_URL=warehouse-service:8085
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: ecommerce
+      DB_SSLMODE: disable
+      JWT_SECRET: test
+      USER_SERVICE_PORT: 8080
+      USER_GRPC_PORT: 50051
     depends_on:
-      - user-service
-      - product-service
-      - order-service
-      - shop-service
-      - warehouse-service
-
-  # Microservices
-  user-service:
-    build: ./user-service
-    ports:
-      - "8081:8080"
-    environment:
-      - DB_HOST=user-db
-      - DB_PORT=5432
-      - DB_USER=user
-      - DB_PASSWORD=password
-      - DB_NAME=user_service
-      - JWT_SECRET=your-jwt-secret
-    depends_on:
-      - user-db
+      postgres:
+        condition: service_healthy
+    networks:
+      - ecommerce-network
 
   product-service:
-    build: ./product-service
+    build:
+      context: .
+      dockerfile: ./product-service/Dockerfile.product
+    restart: on-failure
     ports:
-      - "8082:8080"
+      - "8081:8081"
+      - "50052:50052"
     environment:
-      - DB_HOST=product-db
-      - DB_PORT=5432
-      - DB_USER=product
-      - DB_PASSWORD=password
-      - DB_NAME=product_service
-      - WAREHOUSE_SERVICE_URL=warehouse-service:8085
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: ecommerce
+      DB_SSLMODE: disable
+      PRODUCT_SERVICE_PORT: 8081
+      PRODUCT_GRPC_PORT: 50052
     depends_on:
-      - product-db
-      - warehouse-service
+      postgres:
+        condition: service_healthy
+    networks:
+      - ecommerce-network
 
   order-service:
-    build: ./order-service
+    build:
+      context: .
+      dockerfile: ./order-service/Dockerfile.order
+    restart: on-failure
     ports:
-      - "8083:8080"
+      - "8082:8082"
+      - "50053:50053"
     environment:
-      - DB_HOST=order-db
-      - DB_PORT=5432
-      - DB_USER=order
-      - DB_PASSWORD=password
-      - DB_NAME=order_service
-      - REDIS_URL=redis:6379
-      - WAREHOUSE_SERVICE_URL=warehouse-service:8085
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: ecommerce
+      DB_SSLMODE: disable
+      ORDER_SERVICE_PORT: 8082
+      ORDER_GRPC_PORT: 50053
+      ORDER_TIMEOUT_MINUTES: 15
+      PRODUCT_SERVICE_GRPC_ADDR: product-service:50052
+      WAREHOUSE_SERVICE_GRPC_ADDR: warehouse-service:50055
     depends_on:
-      - order-db
-      - redis
-      - warehouse-service
+      postgres:
+        condition: service_healthy
+      user-service:
+        condition: service_started
+      product-service:
+        condition: service_started
+    networks:
+      - ecommerce-network
 
   shop-service:
-    build: ./shop-service
+    build:
+      context: .
+      dockerfile: ./shop-service/Dockerfile.shop
+    restart: on-failure
     ports:
-      - "8084:8080"
+      - "8083:8083"
+      - "50054:50054"
     environment:
-      - DB_HOST=shop-db
-      - DB_PORT=5432
-      - DB_USER=shop
-      - DB_PASSWORD=password
-      - DB_NAME=shop_service
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: ecommerce
+      DB_SSLMODE: disable
+      SHOP_SERVICE_PORT: 8083
+      SHOP_GRPC_PORT: 50054
     depends_on:
-      - shop-db
+      postgres:
+        condition: service_healthy
+      user-service:
+        condition: service_started
+    networks:
+      - ecommerce-network
 
   warehouse-service:
-    build: ./warehouse-service
+    build:
+      context: .
+      dockerfile: ./warehouse-service/Dockerfile.warehouse
+    restart: on-failure
     ports:
-      - "8085:8080"
+      - "8084:8084"
+      - "50055:50055"
     environment:
-      - DB_HOST=warehouse-db
-      - DB_PORT=5432
-      - DB_USER=warehouse
-      - DB_PASSWORD=password
-      - DB_NAME=warehouse_service
-      - REDIS_URL=redis:6379
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: ecommerce
+      DB_SSLMODE: disable
+      WAREHOUSE_SERVICE_PORT: 8084
+      WAREHOUSE_GRPC_PORT: 50055
     depends_on:
-      - warehouse-db
-      - redis
+      postgres:
+        condition: service_healthy
+      shop-service:
+        condition: service_started
+    networks:
+      - ecommerce-network
 
 volumes:
-  user-db-data:
-  product-db-data:
-  warehouse-db-data:
-  shop-db-data:
-  order-db-data:
+  postgres_data:
+
+networks:
+  ecommerce-network:
+    driver: bridge
