--- a/.env
+++ b/.env
@@ -7,7 +7,6 @@ DB_NAME=ecommerce
 DB_SSLMODE=disable
 
 # JWT Secret
-JWT_SECRET=test
 
 # Service Ports
 USER_SERVICE_PORT=8080
@@ -17,12 +16,13 @@ SHOP_SERVICE_PORT=8083
 WAREHOUSE_SERVICE_PORT=8084
 
 # gRPC Ports
-USER_GRPC_PORT=50056
-PRODUCT_GRPC_PORT=50052
-ORDER_GRPC_PORT=50053
-SHOP_GRPC_PORT=50054
-WAREHOUSE_GRPC_PORT=50055
+USER_GRPC_PORT=:50056
+PRODUCT_GRPC_PORT=:50052
+ORDER_GRPC_PORT=:50053
+SHOP_GRPC_PORT=:50054
+WAREHOUSE_GRPC_PORT=:50055
 
 ORDER_TIMEOUT_MINUTES=15
-PRODUCT_SERVICE_GRPC_ADDR=product-service:50052
-WAREHOUSE_SERVICE_GRPC_ADDR=warehouse-service:50055
+PRODUCT_SERVICE_GRPC_ADDR=127.0.0.1:50052
+WAREHOUSE_SERVICE_GRPC_ADDR=127.0.0.1:50055
+SHOP_SERVICE_GRPC_ADDR=127.0.0.1:50054
